syntax = "proto3";
package IM.BaseDefine;
option optimize_for = LITE_RUNTIME;

// service id
enum ServiceID{
    SID_UNUSED          = 0x0000;
    SID_LOGIN           = 0x0001;           // for login
    SID_MSG             = 0x0003;           // for 聊天
    SID_GROUP           = 0x0004;
    SID_SWITCH_SERVICE  = 0x0006;
    SID_OTHER           = 0x0007;
    SID_INTERNAL        = 0x0008;		     
}

// command id for login
enum LoginCmdID{
    CID_LOGIN_UNUSED                      = 0x0000;
    CID_LOGIN_REQ_USERLOGIN         = 0x0103;	// 登陆
    CID_LOGIN_RES_USERLOGIN         = 0x0104;	//
    CID_LOGIN_REQ_USERLOGOUT          = 0x0105;	// 登出
    CID_LOGIN_RES_USERLOGOUT          = 0x0106; 	//
    CID_LOGIN_REQ_KICKCLIENT      = 0x010a;  // 强制某客户端下线
    CID_LOGIN_RES_KICKCLIENT      = 0x010b;
}


// command id for msg
enum MessageCmdID{
    CID_MSG_UNUSED                     = 0x0000;
    CID_MSG_DATA					   = 0x0301;	//
    CID_MSG_DATA_ACK				   = 0x0302; 	//
    CID_MSG_READ_ACK				   = 0x0303; 	//
    CID_MSG_READ_NOTIFY     		   = 0x0304;    //  已读消息通知
    CID_MSG_UNREAD_CNT_REQUEST		   = 0x0307; 	//
    CID_MSG_UNREAD_CNT_RESPONSE		   = 0x0308;	//
}

enum IMGroup{
    CIM_GROUP_UNUSED                   = 0;
    CID_GROUP_CHANGE                   = 0x040b;
}

message IMGroupChangeMemberNotify{
  //cmd id:       0x040b
  string user_id = 1;
  GroupModifyType change_type = 2;
  string group_id = 3;
  repeated string cur_user_id_list = 4;      //现有的成员id
  repeated string chg_user_id_list = 5;      //add: 表示添加成功的id,   del: 表示删除的id
  string rcv_id = 6;
}

enum GroupModifyType{
    GROUP_MODIFY_TYPE_UNUSED = 0x00;
    GROUP_MODIFY_TYPE_ADD   = 0x01;
    GROUP_MODIFY_TYPE_DEL   = 0x02;
    GROUP_MODIFY_TYPE_ADD_ADMIN = 0x03;
    GROUP_MODIFY_TYPE_DEL_ADMIN = 0x04;
    GROUP_MODIFY_TYPE_DISMISS = 0x05;
    GROUP_MODIFY_TYPE_CHANGE_GROUP_NAME = 0x06;
}

// command id for switch service
enum SwitchServiceCmdID{
    CID_SWITCH_UNUSED   = 0x0000;
    CID_SWITCH_P2P_CMD	= 0x0601;	//
}

enum OtherCmdID{
    CID_OTHER_UNUSED                        = 0x0000;
    CID_OTHER_HEARTBEAT                     = 0x0701;
    CID_OTHER_STOP_RECV_PACKET              = 0x0702;
}

enum ResultType{
	Ok				= 0;
	REFUSED		    = 1;

}

enum UserStatType{
    USER_STATUS_UNKNOWN              = 0;
	USER_STATUS_ONLINE 	             = 1; // 在线
	USER_STATUS_OFFLINE	             = 2; // 离线
	USER_STATUS_LEAVE	             = 3; // 离开
    USER_STATUS_HIDDEN               = 4; // 潜水
    USER_STATUS_BUSY                 = 5; // 忙碌
}
enum SessionType{
    SESSION_TYPE_OTHER              = 0;
	SESSION_TYPE_SINGLE             = 1;          	//单聊会话
	SESSION_TYPE_GROUP              = 2;          	//群聊会话
    SESSION_TYPE_SNGLE_TMP          = 3;         //单聊临时会话
    SESSION_TYPE_GROUP_TMP          = 4;         //群聊临时会话
}

enum MsgType{
    MSG_TYPE_RESERVE6       = 0x00;
    MSG_TYPE_SINGLE_TEXT    = 0x01;
    MSG_TYPE_SINGLE_AUDIO   = 0x02;
    MSG_TYPE_PUSH_MESSAGE   = 0x03;
    MSG_TYPE_RESERVE0       = 0x04;
    MSG_TYPE_RESERVE1       = 0x05;
    MSG_TYPE_RESERVE2       = 0x06;
    MSG_TYPE_RESERVE3       = 0x07;
    MSG_TYPE_RESERVE4       = 0x08;
    MSG_TYPE_RESERVE5       = 0x09;
    MSG_TYPE_GROUP_TEXT     = 0x11;
    MSG_TYPE_GROUP_AUDIO    = 0x12;
}

enum ClientType{
    CLIENT_TYPE_UNKNOWN     = 0x00;
	CLIENT_TYPE_WINDOWS     = 0x01;
    CLIENT_TYPE_MAC         = 0x02;
    CLIENT_TYPE_WEBIM       = 0x03;
    CLIENT_TYPE_IOS         = 0x11;
    CLIENT_TYPE_ANDROID     = 0x12;
}

enum GroupType{
	GROUP_TYPE_ALL		    = 0x00;   // note: just for query
	GROUP_TYPE_NORMAL		= 0x01;
	GROUP_TYPE_TMP			= 0x02;
    GROUP_TYPE_PROJECT      = 0x03;
}

enum GroupRole{
    GROUP_ROLE_NORMAL       = 0x00;
    GROUP_ROLE_ADMIN        = 0x01;
    GROUP_ROLE_CREATOR      = 0x02;
}
